wykonanie menu i części pierwszej sekcji

--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sit on Chair</title>
+    <link rel="stylesheet" href="css/Warsztaty1.css">
+</head>
+<body>
+    <header>
+        <menu class="container">
+            <p class="header__title">SIT <span>ON</span> CHAIR</p>
+            <div class="header__menu">
+                <ul>
+                    <li class="header__menu__item">
+                        <a href="">O FIRMIE</a>
+                        <div id="dropdown">
+                            <div class="triangle"></div>
+                        <ul>
+                            <li class="dropdown__item"><a href="">Aktualności</a></li>
+                            <li class="dropdown__item"><a href="">Nasz team</a></li>
+                            <li class="dropdown__item"><a href="">Historia</a></li>
+                        </ul>
+                        </div>
+                    </li>
+                    <li class="header__menu__item">
+                        <a href="">GALERIA</a>
+                    </li>
+                    <li class="header__menu__item">
+                        <a href="">KONTAKT</a>
+                    </li>
+                </ul>
+            </div>
+        </menu>
+    </header>
+    <section class="section1">
+        <div class="container">
+            <div class="blackchair">
+                <img src="images/black_chair.png">
+            </div>
+            <div class="section1__text">
+                <h1 class="section1__title">SIT <span>ON</span> OUR <span>CHAIR</span></h1>
+                <p>Icing tart chupa chups muffin tart cheesecake sweet pastry jujubes. Biscuit apple pie tiramisu jelly-o ice cream gummi bears. Sweet roll chocolate muffin powder muffin danish.</p>
+                <button>ZOBACZ WIĘCEJ</button>
+            </div>
+        </div>
+    </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
