--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -34,14 +34,16 @@
     </header>
     <section class="section1">
         <div class="container">
+            <p class="arrow"> < </p>
             <div class="blackchair">
                 <img src="images/black_chair.png">
             </div>
             <div class="section1__text">
                 <h1 class="section1__title">SIT <span>ON</span> OUR <span>CHAIR</span></h1>
                 <p>Icing tart chupa chups muffin tart cheesecake sweet pastry jujubes. Biscuit apple pie tiramisu jelly-o ice cream gummi bears. Sweet roll chocolate muffin powder muffin danish.</p>
-                <button>ZOBACZ WIĘCEJ</button>
+                <button class="section1__button">ZOBACZ WIĘCEJ</button>
             </div>
+            <p class="arrow"> > </p>
         </div>
     </section>
 
