--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -46,6 +46,23 @@
             <p class="arrow"> > </p>
         </div>
     </section>
+    <section class="section2">
+        <div class="container">
+            <div class="picture_left">
+                <span><p>Chair CLARE</p></span>
+            </div>
+            <div class="picture_right">
+                <span><p>Chair MARGARITA</p></span>
+            </div>
+            <div class="section2__textbox">
+                <h1 class="section2__textbox__title">Find all inputs</h1>
+                <p class="section2__textbox__text">Irony chambray cronut unicorn, pop-up vape green juice forage offal pitchfork flexitarian scenester 8-bit. Whatever flexitarian lo-fi iPhone four loko. Cred hammock activated charcoal vegan sartorial art party.</br></br>
+
+                    Coloring book franzen pickled pug kogi. Vegan pork belly cronut gochujang organic.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
