--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -63,6 +63,86 @@
             </div>
         </div>
     </section>
+    <section class="section3">
+        <div class="container">
+            <h1 class="section3__title">CENNIK</h1>
+        </div>
+    </section>
+    <section class="section4">
+        <div class="container">
+            <div class="box_one">
+                <h1>BASIC PLAN</h1>
+                <div class="circle">
+                    <p id="p1">85</p>
+                    <p id="p2">99</p>
+                    <p id="p3">PLN/MSC</p>
+                </div>
+                <div class="firststripe">
+                    <p>Zakup towaru + dowóz</p>
+                </div>
+                <div class="secondstripe">
+                    <p>Serwis</p>
+                </div>
+                <button>DOŁĄCZ</button>
+            </div>
+            <div class="box_two">
+                <h1>STANDARD PLAN</h1>
+                <div class="circle">
+                    <p id="p1">95</p>
+                    <p id="p2">99</p>
+                    <p id="p3">PLN/MSC</p>
+                </div>
+                <div class="stripefirst">
+                    <p>Zakup towaru + dowóz</p>
+                </div>
+                <div class="secondstripe">
+                    <p>Serwis</p>
+                </div>
+                <div class="thirdstripe">
+                    <p>Gwarancja 5 lat</p>
+                </div>
+                <button id="secondbox__button">DOŁĄCZ</button>
+            </div>
+            <div class="box_three">
+                <h1>ADVANCE PLAN</h1>
+                <div class="circle">
+                    <p id="p1">211</p>
+                    <p id="p2">00</p>
+                    <p id="p3">PLN/MSC</p>
+                </div>
+                <div class="firststripe">
+                    <p>Zakup towaru + dowóz</p>
+                </div>
+                <div class="secondstripe">
+                    <p>Serwis</p>
+                </div>
+                <div class="stripethird">
+                    <p>Gwarancja 6 lat</p>
+                </div>
+                <div class="forthstripe">
+                    <p>Porady projektanta</p>
+                </div>
+                <button>DOŁĄCZ</button>
+            </div>
+        </div>
+    </section>
+    <section class="section5">
+        <div class="container">
+            <h1 class="kontakt">KONTAKT</h1>
+        </div>
+    </section>
+    <section class="section6">
+        <div class="container">
+            <div class="formularz">
+                <input type="text" name="imię" placeholder="Imię">
+                <input type="email" name="email" placeholder="email">
+                <textarea name="wiadomość" placeholder="Wiadomość"></textarea>
+            </div>
+            <div class="form__rest">
+
+            </div>
+        </div>
+    </section>
 
 
 
