Skończenie wszystkich sekcji oraz stopki

--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -122,7 +122,7 @@
                 <div class="forthstripe">
                     <p>Porady projektanta</p>
                 </div>
-                <button>DOŁĄCZ</button>
+                <button id="dolacz">DOŁĄCZ</button>
             </div>
         </div>
     </section>
@@ -139,10 +139,25 @@
                 <textarea name="wiadomość" placeholder="Wiadomość"></textarea>
             </div>
             <div class="form__rest">
-
+                <div class="form__image"></div>
+                <p>Zgadzam się na przetwarzanie </br>danych osobowych</p>
+                <input type="checkbox" name="dane osobowe" checked="checked">
+                <button id="send">WYŚLIJ</button>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="copyright">Copyright 2014 | All Rights Reserved. - Sit On Chair</div>
+            <div class="footer__icons">
+                <img class="icons" src="images/flickr.png">
+                <img class="icons" src="images/vimeo.png">
+                <img class="icons" src="images/pinterest.png">
+                <img class="icons" src="images/twitter.png">
+                <p class="footer__title">SIT <strong>ON</strong> CHAIR</p>
+            </div>
+        </div>
+    </footer>
 
 
 
