--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -83,7 +83,7 @@
                 <div class="secondstripe">
                     <p>Serwis</p>
                 </div>
-                <button>DOŁĄCZ</button>
+                <button id="firstbox_button">DOŁĄCZ</button>
             </div>
             <div class="box_two">
                 <h1>STANDARD PLAN</h1>
@@ -122,7 +122,7 @@
                 <div class="forthstripe">
                     <p>Porady projektanta</p>
                 </div>
-                <button id="dolacz">DOŁĄCZ</button>
+                <button id="thirdbox_button">DOŁĄCZ</button>
             </div>
         </div>
     </section>
