--- a/Warsztaty1.html
+++ b/Warsztaty1.html
@@ -34,7 +34,10 @@
     </header>
     <section class="section1">
         <div class="container">
-            <p class="arrow"> < </p>
+            <button class="arrow prev"> < </button>
+            <div class="slider">
+            <ul>
+            <li>
             <div class="blackchair">
                 <img src="images/black_chair.png">
             </div>
@@ -43,7 +46,20 @@
                 <p>Icing tart chupa chups muffin tart cheesecake sweet pastry jujubes. Biscuit apple pie tiramisu jelly-o ice cream gummi bears. Sweet roll chocolate muffin powder muffin danish.</p>
                 <button class="section1__button">ZOBACZ WIĘCEJ</button>
             </div>
-            <p class="arrow"> > </p>
+            </li>
+                <li>
+                    <div class="blackchair">
+                        <img src="images/orange_chair.png">
+                    </div>
+                    <div class="section1__text">
+                        <h1 class="section1__title">SIT <span>ON</span> OUR <span>CHAIR</span></h1>
+                        <p>Icing tart chupa chups muffin tart cheesecake sweet pastry jujubes. Biscuit apple pie tiramisu jelly-o ice cream gummi bears. Sweet roll chocolate muffin powder muffin danish.</p>
+                        <button class="section1__button">ZOBACZ WIĘCEJ</button>
+                    </div>
+                </li>
+            </ul>
+            </div>
+            <button class="arrow next"> > </button>
         </div>
     </section>
     <section class="section2">
